force-app/main/default/objects/Reference_MPSC_Service_Submission__c/Reference_MPSC_Service_Submission__c.object-meta.xml
<CustomObject>
    <label>Reference MPSC Service Submission</label>
    <nameField>
        <displayFormat>MPSC - {0000000000}</displayFormat>
        <label>MPSC Service Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference MPSC Service Submissions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>