force-app/main/default/objects/Reference_MPSC_Service_Submission__c/fields/At_Risk_Reason_Reason_for_Leaving__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Reason_Reason_for_Leaving__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>At Risk Reason/Reason for Leaving</label>
    <length>50</length>
    <type>Text</type>
</CustomField>