force-app/main/default/objects/Reference_MPSC_Service_Submission__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference MPSC Service Submissions</relationshipLabel>
    <relationshipName>Reference_MPSC_Service_Submissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>