force-app/main/default/objects/Reference_MPSC_Service_Submission__c/fields/Does_Client_Have_Time_Clocks_or_Kiosks__c.field-meta.xml
<CustomField>
    <fullName>Does_Client_Have_Time_Clocks_or_Kiosks__c</fullName>
    <label>Does Client Have Time Clocks or Kiosks?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>