force-app/main/default/objects/Reference_MPSC_Service_Submission__c/fields/Is_this_a_Multi_Id__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Multi_Id__c</fullName>
    <label>Is this a Multi Id?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>