force-app/main/default/objects/Reference_MPSC_Service_Submission__c/fields/List_All_Applicable_Orgs_Labors__c.field-meta.xml
<CustomField>
    <fullName>List_All_Applicable_Orgs_Labors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>List All Applicable Orgs/Labors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>