force-app/main/default/objects/Reference_MPSC_Service_Submission__c/fields/Pay_Types__c.field-meta.xml
<CustomField>
    <fullName>Pay_Types__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>