force-app/main/default/objects/Reference_MPSC_Service_Submission__c/fields/Schedule_by_Template__c.field-meta.xml
<CustomField>
    <fullName>Schedule_by_Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedule by Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>