force-app/main/default/objects/Reference_MPSC_Service_Submission__c/fields/Schedule_Name__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>