force-app/main/default/objects/Reference_MPSC_Service_Submission__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>