force-app/main/default/objects/Reference_MPSC_Service_Submission__c/recordTypes/Power_Apps.recordType-meta.xml
<RecordType>
    <fullName>Power_Apps</fullName>
    <active>true</active>
    <label>Power Apps</label>
</RecordType>