force-app/main/default/objects/Reference_MPSC_Service_Submission__c/recordTypes/Service_Help.recordType-meta.xml
<RecordType>
    <fullName>Service_Help</fullName>
    <active>true</active>
    <label>Service Help</label>
</RecordType>