force-app/main/default/objects/Reference_MPSC_Service_Submission__c/validationRules/MPSC_ServiceHelp_Case_Closed_conditions.validationRule-meta.xml
<ValidationRule>
    <fullName>MPSC_ServiceHelp_Case_Closed_conditions</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
(TODAY() - DATEVALUE(Case__r.ClosedDate) &gt;2),
ISPICKVAL(Case__r.Type ,&quot;Service Help&quot;),
$Profile.Name==&quot;Mid-Market Service Profile&quot;,
Case__r.IsClosed 

)</errorConditionFormula>
    <errorMessage>Case does not meet the criteria and therefore cannot be reopened</errorMessage>
</ValidationRule>